Treat any 1xx response like a 100 response.  Bug 224537, r+sr=darin